--- a/templates/home.html
+++ b/templates/home.html
@@ -8,254 +8,235 @@
   </form>
 </div>
 
-<!-- Table implementation -->
-<div class="row">
-  <div class="column">
-<div class ="table_one">
-  <table id = "add_table" border = "3" class="table table-striped table-dark">
-    <thead>
-      <tr>
-        <TH COLSPAN="7">
-          <h3><BR><center>Player Reccomendations</center></H3>
-       </TH>
-      </tr>
-      <tr>
-        <th scope="col">PlayerID</th>
-        <th scope="col">PlayerID</th>
-        <th scope="col">PlayerName</th>
-        <th scope="col">Points</th>
-        <th scope="col">Assists</th>
-        <th scope="col">Rebounds</th>
-        <th scope="col">ACTIONS</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row"></th>
-        <td>1</td>
-        <td>Mark</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-        <td>
-            <button class="btn btn-outline-primary">Add Player</button>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row"></th>
-        <td>2</td>
-        <td>Jacob</td>
-        <td>10</td>
-        <td>10</td>
-        <td>10</td>
-        <td>
-        <button class="btn btn-outline-primary">Add Player</button>
-      </td>
-      </tr>
-      <tr>
-        <th scope="row"></th>
-        <td>3</td>
-        <td>Larry</td>
-        <td>10</td>
-        <td>10</td>
-        <td>10</td>
-        <td>
-        <button class="btn btn-outline-primary">Add Player</button>
-      </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-</div>
-<div class="column">
-  <div class ="table_two">
-    <table id = "del_table" border = "3" class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <TH COLSPAN="6">
-            <H3><BR><center>Team Roster</center></H3>
-         </TH>
-        </tr>
-        <tr>
-          <th scope="col">PlayerID</th>
-          <th scope="col">PlayerName</th>
-          <th scope="col">Points</th>
-         <th scope="col">Assists</th>
-         <th scope="col">Rebounds</th>
-          <th scope="col">ACTIONS</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-              <button class="btn btn-outline-danger">Delete Player</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-          <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-          <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">5</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">6</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">7</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">8</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">9</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">10</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">11</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">12</th>
-          <td>Larry</td>
-          <td>10</td>
-        <td>10</td>
-        <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-        </td>
-        </tr>
-        <tr>
-          <th scope="row">13</th>
-            <td>Larry</td>
-            <td>10</td>
-            <td>10</td>
-            <td>10</td>
-          <td>
-            <button class="btn btn-outline-danger">Delete Player</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-  <div class="column">
-    <div class ="table_three">
-      <table id=stats_table border="3" class="table table-striped table-dark">
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-12"> <h3><center>Player Recommendations</center></h3>
+      <table class="table table-bordered" style="background-color: white;">
         <thead>
           <tr>
-            <TH COLSPAN="3">
-              <h3><BR><center>Team Statistics</center></H3>
-           </TH>
-          </tr>
-          <tr>
-            <th scope="col">Statistic Name</th>
-            <th scope="col">AVG</th>
+            <th scope="col">PlayerID</th>
+            <th scope="col">PlayerName</th>
+            <th scope="col">Points</th>
+            <th scope="col">Assists</th>
+            <th scope="col">Rebounds</th>
+            <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">Points</th>
-            <td>1</td>
-          </tr>
-          <tr>
-            <th scope="row">Assists</th>
-            <td>2</td>
-
-          </tr>
-          <tr>
-            <th scope="row">Rebounds</th>
-            <td>3</td>
-
-          </tr>
+          {% for player in rec_play %}
+            <tr>
+              <th scope="row">{{ player[0] }}</th>
+              <td>{{ player[1] }}</td>
+              <td>{{ player[2] }}</td>
+              <td>{{ player[3] }}</td>
+              <td>{{ player[4] }}</td>
+              <td>
+                <button type="button" class="btn btn-primary"><i class="bi bi-plus"></i></button>
+              </td>
+            </tr>
+          {% endfor %}
         </tbody>
       </table>
     </div>
   </div>
+</div> -->
+
+
+<div class="list-group">
+  <h3><center>Team Statistics</center></h3>
+<ul class="list-group">
+  <li class="list-group-item"><center>Points: {{ team_stats[0] }}</center></li>
+  <li class="list-group-item"><center>Assists: {{ team_stats[1] }}</center></li>
+  <li class="list-group-item"><center>Rebounds: {{ team_stats[2] }}</center></li>
+</ul>
 </div>
 
+<!-- Table implementation -->
+<style>
+body {
+    color: #404E67;
+    background: #F5F7FA;
+    font-family: 'Open Sans', sans-serif;
+}
+.table-wrapper {
+    width: 700px;
+    margin: 30px auto;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+.table-title {
+    padding-bottom: 10px;
+    margin: 0 0 10px;
+}
+.table-title h2 {
+    margin: 6px 0 0;
+    font-size: 22px;
+}
+.table-title .add-new {
+    float: right;
+    height: 30px;
+    font-weight: bold;
+    font-size: 12px;
+    text-shadow: none;
+    min-width: 100px;
+    border-radius: 50px;
+    line-height: 13px;
+}
+.table-title .add-new i {
+    margin-right: 4px;
+}
+table.table {
+    table-layout: fixed;
+}
+table.table tr th, table.table tr td {
+    border-color: #e9e9e9;
+}
+table.table th i {
+    font-size: 13px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+table.table th:last-child {
+    width: 100px;
+}
+table.table td a {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 5px;
+    min-width: 24px;
+}
+table.table td a.add {
+    color: #27C46B;
+}
+table.table td a.edit {
+    color: #FFC107;
+}
+table.table td a.delete {
+    color: #E34724;
+}
+table.table td i {
+    font-size: 19px;
+}
+table.table td a.add i {
+    font-size: 24px;
+    margin-right: -1px;
+    position: relative;
+    top: 3px;
+}
+table.table .form-control {
+    height: 32px;
+    width: 40px;
+    line-height: 32px;
+    box-shadow: none;
+    border-radius: 2px;
+}
+table.table .form-control.error {
+    border-color: #f50000;
+}
+table.table td .add {
+    display: none;
+}
+</style>
+<script>
+$(document).ready(function(){
+	$('[data-toggle="tooltip"]').tooltip();
+	var actions = $("table td:last-child").html();
+	// Append table with add row form on add new button click
+    $(".add-new").click(function(){
+		$(this).attr("disabled", "disabled");
+		var index = $("table tbody tr:last-child").index();
+        var row = '<tr>' +
+            '<td><input type="text" class="form-control" name="PlayerID" id="PlayerID"></td>' +
+            '<td><input type="text" class="form-control" name="PlayerName" id="PlayerName"></td>' +
+            '<td><input type="text" class="form-control" name="Points" id="Points"></td>' +
+            '<td><input type="text" class="form-control" name="Assists" id="Assists"></td>' +
+            '<td><input type="text" class="form-control" name="Rebounds" id="Rebounds"></td>' +
+			'<td>' + actions + '</td>' +
+        '</tr>';
+    	$("table").append(row);
+		$("table tbody tr").eq(index + 1).find(".add, .edit").toggle();
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+	// Add row on add button click
+	$(document).on("click", ".add", function(){
+		var empty = false;
+		var input = $(this).parents("tr").find('input[type="text"]');
+        input.each(function(){
+			if(!$(this).val()){
+				$(this).addClass("error");
+				empty = true;
+			} else{
+                $(this).removeClass("error");
+            }
+		});
+		$(this).parents("tr").find(".error").first().focus();
+		if(!empty){
+			input.each(function(){
+				$(this).parent("td").html($(this).val());
+			});
+			$(this).parents("tr").find(".add, .edit").toggle();
+			$(".add-new").removeAttr("disabled");
+		}
+    });
+	// Edit row on edit button click
+	$(document).on("click", ".edit", function(){
+        $(this).parents("tr").find("td:not(:last-child)").each(function(){
+			$(this).html('<input type="text" class="form-control" value="' + $(this).text() + '">');
+		});
+		$(this).parents("tr").find(".add, .edit").toggle();
+		$(".add-new").attr("disabled", "disabled");
+    });
+	// Delete row on delete button click
+	$(document).on("click", ".delete", function(){
+        $(this).parents("tr").remove();
+		$(".add-new").removeAttr("disabled");
+    });
+});
+</script>
 
-<!-- Javascript -->
-<script src="static/main.js"></script>
+<body>
+<div class="container-lg">
+    <div class="table-responsive">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-8"><h2>Team Members</h2></div>
+                    <div class="col-sm-4">
+                        <button type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New</button>
+                    </div>
+                </div>
+            </div>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>PlayerID</th>
+                        <th>PlayerName</th>
+                        <th>Points</th>
+                      	<th>Assists</th>
+                      	<th>Rebounds</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                  {% for player in user_players %}
+                    <tr>
+                      	<td>{{ player[0] }}</td>
+                        <td>{{ player[1] }}</td>
+                        <td>{{ player[2] }}</td>
+                        <td>{{ player[3] }}</td>
+                      	<td>{{ player[4] }}</td>
+                        <td>
+                            <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
+                            <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                            <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                        </td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+</body>
 {% endblock content %}
