--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/home">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/crud">Settings</a>
+          </li>
+          
           <li class="select" >
             <h2>NBA DRAFT SELECTOR</h2>
           </li>
