--- a/templates/crud.html
+++ b/templates/crud.html
@@ -34,7 +34,7 @@
 
     <Button type = "submit" name = "submit" value="model">Create New ML Model</Button>
 
-    {% if output[0]|length <= 6 %}
+    {% if output[0]|length <= 9 %}
       <table class="table table-striped table-light">
           <thead>
             <tr>
@@ -44,6 +44,9 @@
               <th scope="col">Position</th>
               <th scope="col">Height</th>
               <th scope="col">Weight</th>
+              <th scope="col">Points</th>
+              <th scope="col">Assists</th>
+              <th scope="col">Rebounds</th>
             </tr>
           </thead>
           <tbody>
@@ -52,42 +55,49 @@
                 <td>{{ row[0] }}</td>
                 <td>{{ row[1] }}</td>
                 <td>{{ row[2] }}</td>
-                <td>{{ row[3] }}</td>
-                <td>{{ row[4] }}</td>
-                <td>{{ row[5] }}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-    {% endif %}
-
-    {% if output[0]|length > 6 %}
-      <table class="table table-striped table-light">
-          <thead>
-            <tr>
-              <th scope="col">Player ID</th>
-              <th scope="col">Player Name</th>
-              <th scope="col">Team</th>
-              <th scope="col">Position</th>
-              <th scope="col">Height</th>
-              <th scope="col">Weight</th>
-              <th scope="col">Wins</th>
-              <th scope="col">Losses</th>
-              <th scope="col">NumGames</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for row in output %}
-              <tr>
-                <td>{{ row[1] }}</td>
-                <td>{{ row[2] }}</td>
-                <td>{{ row[0] }}</td>
                 <td>{{ row[3] }}</td>
                 <td>{{ row[4] }}</td>
                 <td>{{ row[5] }}</td>
                 <td>{{ row[6] }}</td>
                 <td>{{ row[7] }}</td>
                 <td>{{ row[8] }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+    {% endif %}
+
+    {% if output[0]|length > 9 %}
+      <table class="table table-striped table-light">
+          <thead>
+            <tr>
+              <th scope="col">Player ID</th>
+              <th scope="col">Player Name</th>
+              <th scope="col">Team</th>
+              <th scope="col">Position</th>
+              <th scope="col">Height</th>
+              <th scope="col">Weight</th>
+              <th scope="col">Points</th>
+              <th scope="col">Assists</th>
+              <th scope="col">Rebounds</th>
+              <th scope="col">Wins</th>
+              <th scope="col">Losses</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for row in output %}
+              <tr>
+                <td>{{ row[0] }}</td>
+                <td>{{ row[1] }}</td>
+                <td>{{ row[2] }}</td>
+                <td>{{ row[3] }}</td>
+                <td>{{ row[4] }}</td>
+                <td>{{ row[5] }}</td>
+                <td>{{ row[6] }}</td>
+                <td>{{ row[7] }}</td>
+                <td>{{ row[8] }}</td>
+                <td>{{ row[9] }}</td>
+                <td>{{ row[10] }}</td>
               </tr>
             {% endfor %}
           </tbody>
