Everything is Working

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>An application that allows NBA scouts to find prospective NCAA and G-League players for their respective teams. </p> 
+  <p>An application that allows NBA scouts to find prospective EuroLeague and Greek Basket League players for their respective teams. </p> 
 {% endblock content %}
