--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
           </li>
           
           <li class="select" >
-            <h2>NBA DRAFT SELECTOR</h2>
+            <h2>NBA PLAYERS SELECTOR</h2>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/signin">Sign In</a>
